# kodegen-tools-git

./: Cargo.toml  README.md
examples/: direct_comprehensive.rs  git_demo.rs
examples/common/: mod.rs
src/: lib.rs  main.rs
src/operations/: auth.rs  clone.rs  commit.rs  diff.rs  fetch.rs  history.rs  introspection.rs  log.rs  mod.rs  pull.rs  remote.rs  stash.rs
src/operations/push/: check.rs  core.rs  delete.rs  mod.rs
src/tools/: add.rs  branch_create.rs  branch_delete.rs  branch_list.rs  branch_rename.rs  checkout.rs  clone.rs  commit.rs  diff.rs  discover.rs  fetch.rs  history.rs  init.rs  log.rs  merge.rs  mod.rs  open.rs  pull.rs  push.rs  remote_add.rs  remote_list.rs  remote_remove.rs  reset.rs  stash.rs  status.rs  tag.rs  worktree_add.rs  worktree_list.rs  worktree_lock.rs  worktree_prune.rs  worktree_remove.rs  worktree_unlock.rs
tests/: git.rs  test_lib.rs
tests/git/: test_add.rs  test_branch.rs  test_checkout.rs  test_clone.rs  test_commit.rs  test_fetch.rs  test_log.rs  test_merge.rs  test_open.rs  test_push.rs  test_reset.rs  test_tag.rs
tests/runtime/: test_async_task.rs
