[package]
name = "kodegen_tools_git"
version = "0.10.1"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-tools-git"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[package.metadata.bundle]
identifier = "ai.kodegen.kodegen_tools_git"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]
kodegen_config = { version = "0.10" }
kodegen_mcp_schema = { version = "0.10" }
kodegen_config_manager = { version = "0.10" }
kodegen_server_http = { version = "0.10" }

schemars = "1"
anyhow = "1"
rmcp = { version = "0.10", features = ["client", "schemars", "server", "transport-sse-server", "transport-child-process", "transport-io", "transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

# Dependencies for embedded server mode
env_logger = "0.11"
rustls = "0.23"

gix = { version = "0.75", default-features = false, features = [
    "blob-diff",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "max-performance",
    "credentials",
    "dirwalk",
    "revision",
    "index",
    "blob-diff",
    "worktree-mutation",
    "merge",
    "excludes",
    "status",
] }
# Explicit dependencies to fix Docker build transitive dependency resolution
gix-lock = "19"
gix-tempfile = "19"
gix-utils = "0.3"
gix-url = "0.33"
thiserror   = "2"
chrono      = "0.4"
log         = "0.4"
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
tokio-stream = "0.1"
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
walkdir     = "2"
similar     = "2.6"
regex       = "1.10"

[dev-dependencies]
kodegen_mcp_client = { version = "0.10" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1"
uuid = { version = "1", features = ["v4"] }
tempfile    = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "kodegen_tools_git"
path = "src/lib.rs"

[[bin]]
name = "kodegen-git"
path = "src/main.rs"

[workspace]
# This package is independent and not part of the parent workspace
